# BUAA_BME_Training

./: .clang-tidy  .gitignore  CHANGELOG.md  CUSTOM_SENSOR_GUIDE.md  QUICK_FIX.md  QUICK_REFERENCE.md  README _zh.md  README.md  README_NEW.md  TOPIC_DISCOVERY_FIX.md  build_and_run_custom.sh  cleanup_project.ps1  cleanup_project.sh  diagnose_dds.sh  local_test.sh  setup.sh  setup_default.sh  setup_local.sh  setup_local_fixed.sh  single_terminal_test.sh  test_simulator_and_reader.sh
.chglog/: CHANGELOG.tpl.md  config.yml
.devcontainer/: Dockerfile-foxy  Dockerfile-foxy-from-ubuntu  Dockerfile-humble  devcontainer.json  docker-compose.yml
.github/workflows/: auto-tag.yml  build-foxy.yml  build-humble.yml  release.yml
1note/: 11.10.md  12.4.md  12.5.md
1note/12.10/: 12.10_电机转动方向.md
1note/12.17/: 12.17_从哪里开始呢.md
1note/12.20/: 12.20_关于多设备的ttyUSB号.md  12.20_足底传感器快速启动.md
1note/12.21/: 12.21_备忘录.md  12.21_开发计划.md
1note/12.22/: 12.22_最大困难之一USB穿透docker问题解决方案.md  12.22_电机IMU_SVM配合的快速启动.md  12.22_解决问题的回顾-电机参数选择.md  系统集成完成报告.md
1note/12.23/: 12.23_电机调参.md
1note/12.5/: 12.5.md  IMU配置使用指南.md  USB串口连接WSL2流程.md  树莓派Docker部署配置.md
1note/12.6/: 12.6_快速启动.md  单位说明和一些快速验证.md
1note/12.8/: 12.8_IMU节点快速启动.md  12.8_功能包说明.md  12.8_后续工作安排及SVM示例.md  12.8_未来实机测试需要做的事.md
1note/总体设计/: 12.20_流程图.md  12.8_前馈控制概念及其相较于PID的优势.md
cyclonedds_ws/src/: cyclonedds.xml
cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt  package.xml
cyclonedds_ws/src/unitree/unitree_go/: CMakeLists.txt  package.xml
cyclonedds_ws/src/unitree/unitree_hg/: CMakeLists.txt  package.xml
docs/: COLCON_CMAKE_DECISION_GUIDE.md  COLCON_CMAKE_DEEP_DIVE.md  COLCON_VS_CMAKE.md  compare_colcon_cmake.sh
example/: COMPILE_ERROR_FIX.md  COMPILE_FIX_SUMMARY.md  LOCAL_SIMULATION_GUIDE.md  README_LOCAL_TEST.md
example/src/: CMakeLists.txt  package.xml
example/src/custom_robot_bridge/: CMakeLists.txt  README.md  package.xml
example/src/custom_robot_bridge/src/: custom_robot_controller.cpp  sensor_bridge_node.cpp
example/src/imu_serial_publisher/: CMakeLists.txt  COMMUNICATION_EXPLAINED.md  README.md  package.xml
example/src/imu_serial_publisher/config/: imu_params.yaml
example/src/imu_serial_publisher/launch/: imu_serial.launch.py
example/src/imu_serial_publisher/src/: imu_serial_publisher.cpp
example/src/include/b2/: b2_motion_switch_client.hpp
example/src/include/common/: b2_base_client.hpp  base_client.hpp  motor_crc.h  motor_crc_hg.h  patch.hpp  ros2_b2_sport_client.h  ros2_robot_state_client.h  ros2_sport_client.h  time_tools.hpp  ut_errror.hpp
example/src/include/g1/: g1.hpp  g1_arm_action_client.hpp  g1_audio_client.hpp  g1_loco_client.hpp  g1_motion_switch_client.hpp
example/src/include/nlohmann/: json.hpp
example/src/src/: custom_sensor_logger.cpp  custom_sensor_reader.cpp  low_level_ctrl.cpp  record_bag.cpp  simulate_robot.cpp
example/src/src/b2/: b2_sport_client.cpp  b2_stand_example.cpp
example/src/src/b2w/: b2w_sport_client.cpp  b2w_stand_example.cpp
example/src/src/common/: motor_crc.cpp  motor_crc_hg.cpp  ros2_b2_sport_client.cpp  ros2_sport_client.cpp
example/src/src/g1/lowlevel/: gamepad.hpp  (+3 more)
example/src/src/go2/: go2_robot_state_client.cpp  go2_sport_client.cpp  go2_stand_example.cpp
joint_trajectory/: limit_gait.csv  normal_gait.csv
robot_ws/: HANDOVER_TO_CONTAINER.md  check_esp32_serial.sh
robot_ws/data/: IMU_CSV_USAGE.md  imu_gait_data_20251208_161501.csv  imu_gait_data_20251220_161618.csv  imu_gait_data_20251220_212156.csv  imu_gait_data_20251220_213756.csv
robot_ws/scripts/: foot_sensor_reader.py  imu_health_check.py  test_serial.py
robot_ws/src/exo_sensors/: IMU_CSV_USAGE.md  README.md  package.xml  setup.cfg  setup.py
robot_ws/src/exo_sensors/config/: foot_state_machine.yaml  imu_csv_dev_wsl.yaml  imu_csv_raspberry_pi.yaml  imu_csv_reader.yaml  imu_data_recorder.yaml  imu_visualizer.yaml
robot_ws/src/exo_sensors/exo_sensors/: __init__.py  foot_state_machine.py  imu_csv_reader.py  imu_data_recorder.py  imu_visualizer.py
robot_ws/src/exo_sensors/launch/: foot_state_machine.launch.py  imu_complete_system.launch.py  imu_csv_dev_wsl.launch.py  imu_csv_raspberry_pi.launch.py  imu_csv_reader.launch.py
robot_ws/src/exo_sensors/resource/: exo_sensors
robot_ws/src/exoskel_control_py/: package.xml  setup.cfg  setup.py
robot_ws/src/exoskel_control_py/config/: convert_model_numpy1.py  create_dummy_model.py  gait_inference.yaml  motor_driver.yaml
robot_ws/src/exoskel_control_py/example/: changeID.cpp
robot_ws/src/exoskel_control_py/exoskel_control_py/: gait_inference_node.py  motor_driver_node.py
robot_ws/src/exoskel_control_py/launch/: exoskel_control.launch.py
robot_ws/src/exoskel_control_py/python/: dianji01.py  stop.py  test_rotate.py
robot_ws/src/exoskel_control_py/resource/: exoskel_control_py
robot_ws/src/imu_serial_publisher/: CMakeLists.txt
robot_ws/src/robot_controller/: CMakeLists.txt  README.md  package.xml
robot_ws/src/robot_controller/config/: controller_params.yaml
robot_ws/src/robot_controller/launch/: robot_system.launch.py
robot_ws/src/robot_controller/scripts/: data_logger.py  visualization.py
robot_ws/src/robot_controller/src/: main_controller.cpp
sensor_source_code/9DOF_Demo_v2/: 9DOF_Demo_v2.ino  IMU.cpp
sensor_source_code/9DOF_Demo_v3/: 9DOF_Demo_v3.ino  QMI8658.cpp
svm/: imu_gait_data_20251220_213756.csv  main.py  main_small_test.py  main_v2.py  main_v3.py  optimized_feature_columns.pkl  optimized_gait_scaler.pkl  test_inference.py
test_ws/src/pub_sub_demo/: CMakeLists.txt  package.xml
test_ws/src/topic_test_demo/: sub.hpp
unitree_actuator_sdk-main/data/: trajectory_20251220_175458.csv  trajectory_20251220_180710.csv  trajectory_20251220_180819.csv  trajectory_20251220_181411.csv  trajectory_20251220_181600.csv  trajectory_20251220_183816.csv  trajectory_20251221_170105.csv  trajectory_20251221_172841.csv  trajectory_20251221_173338.csv  trajectory_20251221_174443.csv
unitree_actuator_sdk-main/python/: ceshi.py  test_motor_id.py  test_rotate.py  zero.py
(+53 files in other folders)
